--- a/WebContent/WEB-INF/templates/includes/searchNav.html
+++ b/WebContent/WEB-INF/templates/includes/searchNav.html
@@ -8,7 +8,7 @@
 
 
 		<!-- HTML form with search textbox and submit button-->
-		<form class="navbar-form navbar-right" role="search" method="post" action="searchUsers">
+		<form class="navbar-form navbar-left" role="search" method="post" action="searchUsers">
 			<div class="input-group">
 				<input type="text" class="form-control" placeholder="Search for..." name="searchString">
 				<span class="input-group-btn">
@@ -16,5 +16,10 @@
 				</span>
 			</div>
 		</form>
+		
+		
+   		
+   		
+		
 	</div>
 </nav>
