--- a/WebContent/WEB-INF/templates/index.html
+++ b/WebContent/WEB-INF/templates/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-	>
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 <div th:replace="~{includes/bootstrap :: bootstrapMeta}" />
 <title>COMMUNE-IC8</title>
@@ -12,7 +11,7 @@
 	<div class="container" role="main">
 
 		<div class="page-header">
-			
+			<h1>COMMUNE-IC8</h1>
 		</div>
 
 		<!--  Error message ----------------------------------------------------------- -->
@@ -21,8 +20,9 @@
 		<!--  Error message ----------------------------------------------------------- -->
 
 		<!--  Warning message ----------------------------------------------------------- -->
-		<div th:unless="${warningMessage} == null" th:utext="${warningMessage}"
-			class="alert alert-warning" role="warning"></div>
+		<div th:unless="${warningMessage} == null"
+			th:utext="${warningMessage}" class="alert alert-warning"
+			role="warning"></div>
 		<!--  Warning message ----------------------------------------------------------- -->
 
 		<!--   message ----------------------------------------------------------- -->
@@ -33,48 +33,50 @@
 		<nav th:replace="~{includes/searchNav :: search}"></nav>
 
 		<!--  1 simple button ----------------------------------------------------------- -->
-		<div class="row">
-		</div>
+		<div class="row"></div>
 		<!--  1 simple button ----------------------------------------------------------- -->
 
-		<div class="row">
-			<div class="col-md-10 col-md-offset-1">
 
-				<table data-toggle="table" class="table table-striped">
-					<thead>
-						<tr>
-							<th>Username</th>
-							<th>Password</th>
-							<th>Enabled</th>
-							<th>First Name</th>
-							<th>Last Name</th>
-							<th> Mobile Number </th>
-							<th> E-Mail </th>
-							<th> DOB </th>
-							
-						</tr>
-					</thead>
-					<tbody>
-						<!--  list all items ----------------------------------------------------------- -->
-						<tr th:each="user : ${users}">
-							<td th:text="${user.username}"></td>
-							<td th:text="${user.firstName}"></td>
-							<td th:text="${user.enabled}"></td>
-							<td th:text="${user.firstname}"></td>
-							<td th:text="${user.lastname}"></td>
-							<td th:text="${user.mobilenumber}"></td>
-							<td th:text="${user.email}"></td>							
-							<td th:text="${#calendars.format(user.birthdate,'dd.MM.yyyy')}"></td>
-							<!-- <td><a sec:authorize="hasRole('ADMIN')" th:href="@{/delete(id=${employee.id})}">Delete</a></td> -->
-							
-						</tr>
-						<!--  list all items ----------------------------------------------------------- -->
-					</tbody>
-				</table>
-								
-			</div>
+
+		<!-- Right Dynamic Content------------------------------------------------------- -->
+		<div class="col-sm-10">
+
+			<table data-toggle="table" class="table table-striped">
+				<thead>
+					<tr>
+						<th>Username</th>
+						<th>Password</th>
+						<th>Enabled</th>
+						<th>First Name</th>
+						<th>Last Name</th>
+						<th>Mobile Number</th>
+						<th>E-Mail</th>
+						<th>DOB</th>
+
+					</tr>
+				</thead>
+				<tbody>
+					<!--  list all items ----------------------------------------------------------- -->
+					<tr th:each="user : ${users}">
+						<td th:text="${user.username}"></td>
+						<td th:text="${user.firstName}"></td>
+						<td th:text="${user.enabled}"></td>
+						<td th:text="${user.firstname}"></td>
+						<td th:text="${user.lastname}"></td>
+						<td th:text="${user.mobilenumber}"></td>
+						<td th:text="${user.email}"></td>
+						<td th:text="${#calendars.format(user.birthdate,'dd.MM.yyyy')}"></td>
+						<!-- <td><a sec:authorize="hasRole('ADMIN')" th:href="@{/delete(id=${employee.id})}">Delete</a></td> -->
+
+					</tr>
+					<!--  list all items ----------------------------------------------------------- -->
+				</tbody>
+			</table>
+
 		</div>
-		
+		<!-- Right Dynamic Content------------------------------------------------------- -->
+	</div>
+
 	</div>
 	<!--  End of container -->
 	<div th:replace="~{includes/bootstrap :: bootstrapJS}" />
