--- a/WebContent/WEB-INF/templates/includes/searchNav.html
+++ b/WebContent/WEB-INF/templates/includes/searchNav.html
@@ -1,25 +1,53 @@
-<nav th:fragment="search" class="navbar navbar-default">
+<nav th:fragment="search" class="navbar navbar-inverse">
 	<div class="container-fluid">
 
-		<form class="navbar-form navbar-right" th:action="@{/logout}" method="post" >
-      		<input class="btn btn-danger" type="submit" value="Sign Out"/>
-   		</form> 
+		<form class="navbar-form navbar-right" th:action="@{/logout}"
+			method="post">
+			<input class="btn btn-danger" type="submit" value="Sign Out" />
+		</form>
 
 
 
 		<!-- HTML form with search textbox and submit button-->
-		<form class="navbar-form navbar-left" role="search" method="post" action="searchUsers">
+		<form class="navbar-form navbar-right" role="search" method="post"
+			action="searchUsers">
 			<div class="input-group">
-				<input type="text" class="form-control" placeholder="Search for..." name="searchString">
-				<span class="input-group-btn">
+				<input type="text" class="form-control" placeholder="Search for..."
+					name="searchString"> <span class="input-group-btn">
 					<button class="btn btn-default" type="submit">Go!</button>
 				</span>
 			</div>
 		</form>
-		
-		
-   		
-   		
-		
+
+
+		<form class="navbar-form navbar-left" method="post">
+			<ul class="nav navbar-nav">
+				<li class="dropdown"><a class="dropdown-toggle"
+					data-toggle="dropdown" href="#">Menu <span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li>
+							<form class="navbar-form" th:action="@{/grocery}"
+								method="post">
+								<a class="btn btn-default" type="submit">Grocery</a>
+							</form>
+						</li>
+						
+						<li>
+							<form class="navbar-form" th:action="@{/todo}"
+								method="post">
+								<a class="btn btn-default" type="submit">To-Do's</a>
+							</form>
+						</li>
+						
+						
+						
+						
+					</ul></li>
+
+			</ul>
+		</form>
+
+
+
 	</div>
 </nav>
