--- a/WebContent/WEB-INF/templates/listGrocery.html
+++ b/WebContent/WEB-INF/templates/listGrocery.html
@@ -37,39 +37,43 @@
 		</div>
 		<!--  1 simple button ----------------------------------------------------------- -->
 
-		<<div class="row">
+		<div class="row">
 			<div class="col-md-10 col-md-offset-1">
 
 				<table data-toggle="table" class="table table-striped">
 					<thead>
 						<tr>
-							<th data-sortable="true">SSN</th>
-							<th data-sortable="true">First Name</th>
-							<th data-sortable="true">Last Name</th>
+							<th data-sortable="true">ID</th>
+							<th data-sortable="true">Grocery</th>
+							<th data-sortable="true">bought</th>
+							<th sec:authorize="hasRole('ADMIN')"> Actions</th>
+							
 							
 							<th>Actions</th>
 						</tr>
 					</thead>
+					
+					
 					<tbody>
 						<!--  list all items ----------------------------------------------------------- -->
-						<tr th:each="employee : ${#request.getAttribute('employees')}">
-							<td th:text="${employee.ssn}"></td>
-							<td th:text="${employee.firstName}"></td>
-							<td th:text="${employee.lastName}"></td>
+						<tr th:each="grocery : ${groceries}">
+							<td th:text="${grocery.id}"></td>
+							<td th:text="${grocery.groceryName}"></td>
+							<td th:text="${grocery.bought}"></td>
 							
 
-							<td>
-								<a th:href="@{/editEmployee(ssn=${employee.ssn})}" class="btn btn-xs btn-success">
-									<span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+							<td sec:authorize="hasRole('ADMIN')">
+							<a th:href="@{/editGrocery(id=${grocery.id})}"
+								class="btn btn-xs btn-success"> <span
+									class="glyphicon glyphicon-edit" aria-hidden="true"></span>
 									Edit
+							</a> <a
+									th:href="@{/deleteGrocery(id=${grocery.id})}"
+									class="btn btn-xs btn-danger"> <span
+										class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+										Delete
 								</a>
-
-								<a th:href="@{/deleteEmployee(ssn=${employee.ssn})}" class="btn btn-xs btn-danger">
-									<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-									Delete
-								</a>
-
-							</td>
+					</td>
 						</tr>
 						<!--  list all items ----------------------------------------------------------- -->
 					</tbody>
