commit before merge

--- a/WebContent/WEB-INF/templates/listGrocery.html
+++ b/WebContent/WEB-INF/templates/listGrocery.html
@@ -56,7 +56,7 @@
 					
 					<tbody>
 						<!--  list all items ----------------------------------------------------------- -->
-						<tr th:each="grocery : ${groceries}">
+						<tr th:each="grocery : ${grocerie}">
 							<td th:text="${grocery.id}"></td>
 							<td th:text="${grocery.groceryName}"></td>
 							<td th:text="${grocery.bought}"></td>
