grocery list working

--- a/WebContent/WEB-INF/templates/listGrocery.html
+++ b/WebContent/WEB-INF/templates/listGrocery.html
@@ -57,6 +57,7 @@
 					<tbody>
 						<!--  list all items ----------------------------------------------------------- -->
 						<tr th:each="grocery : ${groceries}">
+						<td th:text="${grocery.id}"></td>
 							<td th:text="${grocery.groceryName}"></td>
 							<td th:text="${grocery.bought}"></td>
 							
