--- a/WebContent/WEB-INF/templates/listGrocery.html
+++ b/WebContent/WEB-INF/templates/listGrocery.html
@@ -36,7 +36,7 @@
 		<div class="row">
 		</div>
 		<!--  1 simple button ----------------------------------------------------------- -->
-
+		<Form><input type="submit" name="pdf" value="PDF" class="btn btn-primary"></Form>
 		<div class="row">
 			<div class="col-md-10 col-md-offset-1">
 
