working on design

--- a/WebContent/WEB-INF/templates/index.html
+++ b/WebContent/WEB-INF/templates/index.html
@@ -79,9 +79,12 @@
 		</div>
 		<!-- Right Dynamic Content------------------------------------------------------- -->
 	</div>
-
+	
+	
+	
 	</div>
 	<!--  End of container -->
 	<div th:replace="~{includes/bootstrap :: bootstrapJS}" />
+	<div th:replace="~{includes/footer :: footer}" />
 </body>
 </html>
