--- a/WebContent/WEB-INF/templates/includes/searchNav.html
+++ b/WebContent/WEB-INF/templates/includes/searchNav.html
@@ -1,4 +1,4 @@
-<nav th:fragment="search" class="navbar navbar-inverse">
+<nav th:fragment="search" class="navbar navbar-inverse navbar-fixed-top">
 	<div class="container-fluid">
 
 		<form class="navbar-form navbar-right" th:action="@{/logout}"
