--- a/WebContent/WEB-INF/templates/listTodo.html
+++ b/WebContent/WEB-INF/templates/listTodo.html
@@ -12,7 +12,7 @@
 	<div class="container" role="main">
 
 		<div class="page-header">
-			
+		<h1>LIST TODO's</h1>
 		</div>
 
 		<!--  Error message ----------------------------------------------------------- -->
