--- a/WebContent/WEB-INF/templates/addComment.html
+++ b/WebContent/WEB-INF/templates/addComment.html
@@ -4,7 +4,7 @@
 
 <head>
 <div th:include="~{includes/bootstrap :: bootstrapMeta}" th:remove="tag" />
-<title>EDIT COMMENTS</title>
+<title>COMMUNE-IC8</title>
 <div th:include="~{includes/bootstrap :: bootstrapCSS}" th:remove="tag" />
 <link
 	href="http://www.malot.fr/bootstrap-datetimepicker/bootstrap-datetimepicker/css/bootstrap-datetimepicker.css"
@@ -16,41 +16,29 @@
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
 				<form class="form-horizontal" method="post"
-					th:action="${todo} ? @{/changeTodo(id=${todo.id})} : @{/createNewTodo}">
+					th:action="${@{/createComment}">
 					<!--<input type="hidden" th:name="${_csrf.parameterName}"
 						th:value="${_csrf.token}" />-->
 					<fieldset>
-						<legend th:text="${todo}? 'Change Todo' : 'New Todo'">New
-							COMMENTS</legend>
+						<legend th:text="New Comment">New
+							Comment</legend>
 
-						<!-- --------------  Name ---------------- 
+						<!-- --------------  text ---------------- -->
 						<div class="form-group">
-							<label for="todoName" class="col-md-2 control-label">
-								TodoName </label>
+							<label for="commentText" class="col-md-2 control-label">
+								Text</label>
 							<div class="col-md-10">
-								<input class="form-control" id="todoName" type="text"
-									name="todoName" th:value="${todo} ? ${todo.todoName}">
+								<input class="form-control" type="text"
+									name="commentText" th:value="${comment.text}">
 							</div>
-						</div>
-						
-						
-						<div class="form-group">
-							<label for="inputAvailable" class="col-md-2 control-label">Bought
-							</label>
-							<div class="col-md-10">
-								<input th:checked="${todo} ? ${tod.bought}"
-									id="boughtstate" class=form-control type="checkbox"
-									name="boughtstate">
-							</div>
-						</div>
-							-->
+						</div>	
 
 											
 						<!-- --------------  buttons ---------------- -->
 						<div class="form-group">
 							<div class="col-md-10 col-md-offset-2">
 								<button type="submit" class="btn btn-primary">Submit</button>
-								<a th:action="createNewGroceryItem" class="btn btn-default"> Cancel </a>
+								<a th:action="listComments" class="btn btn-default"> Cancel </a>
 							</div>
 						</div>
 
