--- a/WebContent/WEB-INF/templates/includes/searchNav.html
+++ b/WebContent/WEB-INF/templates/includes/searchNav.html
@@ -8,7 +8,7 @@
 		
 		<span sec:authorize="hasRole('ADMIN')">
 		<form th:action="@{/editGrocery}" method="post" class="btn btn-default navbar-btn">
-			<input class="btn btn-default" type = "submit" value = "Add new GRocery"/>
+			<input class="btn btn-default" type = "submit" value = "Add new Grocery"/>
 		</form> </span>
 
 
