--- a/WebContent/WEB-INF/templates/editUser.html
+++ b/WebContent/WEB-INF/templates/editUser.html
@@ -1,10 +1,129 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8">
-<title>Edit USER </title>
+<div th:include="~{includes/bootstrap :: bootstrapMeta}" th:remove="tag" />
+<title>Edit User</title>
+<div th:include="~{includes/bootstrap :: bootstrapCSS}" th:remove="tag" />
+<link
+	href="http://www.malot.fr/bootstrap-datetimepicker/bootstrap-datetimepicker/css/bootstrap-datetimepicker.css"
+	rel="stylesheet">
 </head>
+
 <body>
+	<div class="container" role="main">
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<form class="form-horizontal" method="post"
+					th:action="${user} ? @{/changeGrocery(id=${grocery.id})} : @{/createNewGroceryItem}">
+					<!--<input type="hidden" th:name="${_csrf.parameterName}"
+						th:value="${_csrf.token}" />-->
+					<fieldset>
+						<legend th:text="${grocery}? 'Change Grocery' : 'New Grocery'">New
+							Grocery</legend>
+
+						<!-- --------------  UserName ---------------- -->
+						<div class="form-group">
+							<label class="col-md-2 control-label">
+								Username </label>
+							<div class="col-md-10">
+								<input class="form-control" type="text" name="username"
+									th:value="${user} ? ${user.userName}">
+							</div>
+						</div>
+						<!-- --------------  MobileNumber ---------------- -->
+						<div class="form-group">
+							<label class="col-md-2 control-label">
+								Password</label>
+							<div class="col-md-10">
+								<input class="form-control" type="text" name="password"
+									th:value="${user} ? ${user.password}">
+							</div>
+						</div>
+						
+						
+						<!-- --------------  FirstName ---------------- -->
+						<div class="form-group">
+							<label class="col-md-2 control-label">
+								First Name  </label>
+							<div class="col-md-10">
+								<input class="form-control" type="text" name="firstname"
+									th:value="${user} ? ${user.firstname}">
+							</div>
+						</div>
+						
+						<!-- --------------  LastName ---------------- -->
+						<div class="form-group">
+							<label class="col-md-2 control-label">
+								Last Name </label>
+							<div class="col-md-10">
+								<input class="form-control" type="text" name="lastname"
+									th:value="${user} ? ${user.lastname}">
+							</div>
+							
+						</div>
+						
+						<!-- --------------  MobileNumber ---------------- -->
+						<div class="form-group">
+							<label class="col-md-2 control-label">
+								Mobilephone Number </label>
+							<div class="col-md-10">
+								<input class="form-control" type="text" name="mobilenumber"
+									th:value="${user} ? ${user.mobilenumber}">
+							</div>
+						</div>
+						<!-- --------------  EMail ---------------- -->
+						<div class="form-group">
+							<label class="col-md-2 control-label">
+								E-Mail </label>
+							<div class="col-md-10">
+								<input class="form-control" type="text" name="mobilenumber"
+									th:value="${user} ? ${user.mobilenumber}">
+							</div>
+						</div>
+						
+						
+						
+
+
+
+						<!-- Checkbox Bought  --->
+						<div class="form-group">
+							<label for="inputAvailable" class="col-md-2 control-label">Bought
+							</label>
+							<div class="col-md-10">
+
+								<input  th:checked= "${grocery} ? ${grocery.bought}" class=form-control
+									type="checkbox" name="boughtstate">
+
+							</div>
+						</div>
+
+
+
+						<!-- --------------  buttons ---------------- -->
+						<div class="form-group">
+							<div class="col-md-10 col-md-offset-2">
+								<button type="submit" class="btn btn-primary">Submit</button>
+								<a th:action="listGrocery" class="btn btn-default"> Cancel </a>
+							</div>
+						</div>
+
+					</fieldset>
+				</form>
+			</div>
+		</div>
+
+	</div>
+	<!--  End of container -->
+	<div th:include="~{includes/bootstrap :: bootstrapJS}" th:remove="tag" />
+
+	<!-- JS for Datetime picker -->
+	<script type="text/javascript"
+		src="http://www.malot.fr/bootstrap-datetimepicker/bootstrap-datetimepicker/js/bootstrap-datetimepicker.js"></script>
+
 
 </body>
+
 </html>
