--- a/WebContent/WEB-INF/templates/includes/searchNav.html
+++ b/WebContent/WEB-INF/templates/includes/searchNav.html
@@ -11,10 +11,15 @@
 			<input class="btn btn-default" type = "submit" value = "Add new Grocery"/>
 		</form> </span>
 		
-		<span sec:authorize="hasRole('ADMIN')">
+		<span sec:authorize="hasRole('USER')">
 		<form th:action="@{/addComment}" method="post" class="btn btn-default navbar-btn">
 			<input class="btn btn-default" type = "submit" value = "Add new Comment"/>
 		</form> </span>
+		
+		<span sec:authorize="hasRole('ADMIN')">
+		<form th:action="@{/editUser}" method="post" class="btn btn-default navbar-btn">
+			<input class="btn btn-default" type = "submit" value = "Add new User"/>
+		 </form></span>
 
 
 
