--- a/WebContent/WEB-INF/templates/addComment.html
+++ b/WebContent/WEB-INF/templates/addComment.html
@@ -16,29 +16,31 @@
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
 				<form class="form-horizontal" method="post"
-					th:action="${@{/createComment}">
+					th:action="createComment">
 					<!--<input type="hidden" th:name="${_csrf.parameterName}"
 						th:value="${_csrf.token}" />-->
 					<fieldset>
-						<legend th:text="New Comment">New
-							Comment</legend>
+						<legend th:text="'New Comment'">New Comment</legend>
 
-						<!-- --------------  text ---------------- -->
+						<!-- --------------  Text ---------------- -->
 						<div class="form-group">
-							<label for="commentText" class="col-md-2 control-label">
-								Text</label>
+							<label for="groceryName" class="col-md-2 control-label">
+								Text </label>
 							<div class="col-md-10">
-								<input class="form-control" type="text"
-									name="commentText" th:value="${comment.text}">
+								<input class="form-control" type="text" name="commentText"
+									th:value="${commentText}"
+									placeholder="What comes to your mind ? Du Eierbär..">
 							</div>
-						</div>	
+						</div>
 
-											
+
+
 						<!-- --------------  buttons ---------------- -->
 						<div class="form-group">
 							<div class="col-md-10 col-md-offset-2">
 								<button type="submit" class="btn btn-primary">Submit</button>
-								<a th:action="listComments" class="btn btn-default"> Cancel </a>
+								<a th:action="listComments" class="btn btn-default"> Cancel
+								</a>
 							</div>
 						</div>
 
