--- a/WebContent/WEB-INF/templates/editGrocery.html
+++ b/WebContent/WEB-INF/templates/editGrocery.html
@@ -53,7 +53,7 @@
 						<div class="form-group">
 							<div class="col-md-10 col-md-offset-2">
 								<button type="submit" class="btn btn-primary">Submit</button>
-								<a th:action="listGrocery" class="btn btn-default"> Cancel </a>
+								<a href="showGroceryList" class="btn btn-default"> Cancel </a>
 							</div>
 						</div>
 
