--- a/WebContent/WEB-INF/templates/index.html
+++ b/WebContent/WEB-INF/templates/index.html
@@ -55,6 +55,8 @@
 						<th>Mobile Number</th>
 						<th>E-Mail</th>
 						<th>DOB</th>
+						<th>User Picture</th>
+						<th>Action</th>
 
 					</tr>
 				</thead>
@@ -69,8 +71,20 @@
 						<td th:text="${user.mobilenumber}"></td>
 						<td th:text="${user.email}"></td>
 						<td th:text="${#calendars.format(user.birthdate,'dd.MM.yyyy')}"></td>
-						<!-- <td><a sec:authorize="hasRole('ADMIN')" th:href="@{/delete(id=${employee.id})}">Delete</a></td> -->
-
+						<!-- <td><a sec:authorize="hasRole('ADMIN')" th:href="@{/delete(id=${employee.id})}">Delete</a></td> --
+						<td><span th:if="${user.picture != null}">
+									<a th:href="@{download(documentId=${user.image.id})}"
+												target="_blank" th:text="${user.image.filename}"></a>
+								</span>
+								<span th:unless="${user.image != null}">
+									-- no file ---
+									</span>
+								<td><a th:href="@{upload(id=${user.id})}">
+										<button type="button" class="btn btn-xs btn-success">
+											<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+											Upload
+										</button>
+										</a></td>-->
 					</tr>
 					<!--  list all items ----------------------------------------------------------- -->
 				</tbody>
