--- a/WebContent/WEB-INF/templates/listComments.html
+++ b/WebContent/WEB-INF/templates/listComments.html
@@ -48,12 +48,9 @@
 				<thead>
 					<tr>
 						
-					
-						
-						
-						<th>User</th>
-						<th>Date</th>
-						<th>Text</th>
+						<th data-sortable="true">User</th>
+						<th data-sortable="true">Date</th>
+						<th data-sortable="true">Text</th>
 
 					</tr>
 				</thead>
