fixed bug where comments were not displayed

--- a/WebContent/WEB-INF/templates/addComment.html
+++ b/WebContent/WEB-INF/templates/addComment.html
@@ -24,7 +24,7 @@
 
 						<!-- --------------  Text ---------------- -->
 						<div class="form-group">
-							<label for="groceryName" class="col-md-2 control-label">
+							<label for="commentText" class="col-md-2 control-label">
 								Text </label>
 							<div class="col-md-10">
 								<input class="form-control" type="text" name="commentText"
