--- a/WebContent/WEB-INF/templates/includes/searchNav.html
+++ b/WebContent/WEB-INF/templates/includes/searchNav.html
@@ -8,8 +8,8 @@
 		</form>
 		
 		<span sec:authorize="hasRole('ADMIN')">
-		<form th:action="@{/editGrocery}" method="post" class="btn btn-default navbar-btn">
-			<input class="btn btn-default" type = "submit" value = "Add new Grocery"/>
+		<form th:action="@{/showGroceryList}" method="post" class="btn btn-default navbar-btn">
+			<input class="btn btn-default" type = "submit" value = "Grocery List"/>
 		</form> </span>
 		
 		<span sec:authorize="hasRole('USER')">
