edited some html

--- a/WebContent/WEB-INF/templates/includes/searchNav.html
+++ b/WebContent/WEB-INF/templates/includes/searchNav.html
@@ -13,8 +13,8 @@
 		</form> </span>
 		
 		<span sec:authorize="hasRole('USER')">
-		<form th:action="@{/addComment}" method="post" class="btn btn-default navbar-btn">
-			<input class="btn btn-default" type = "submit" value = "Add new Comment"/>
+		<form th:action="@{/listComments}" method="post" class="btn btn-default navbar-btn">
+			<input class="btn btn-default" type = "submit" value = "Comment Section"/>
 		</form> </span>
 		
 		<span sec:authorize="hasRole('ADMIN')">
