--- a/WebContent/WEB-INF/templates/listComments.html
+++ b/WebContent/WEB-INF/templates/listComments.html
@@ -36,13 +36,20 @@
 		
 
 		<!--  1 simple button ----------------------------------------------------------- -->
-		<div class="row"></div>
+		<div class="row">
+		<form sec:authorize="hasRole('ADMIN')" th:action="@{/addComment}"
+				method="post">
+				<input class="btn btn-default" type="submit" value="Add new Comment" />
+			</form>
+		
+		
+		</div>
 		<!--  1 simple button ----------------------------------------------------------- -->
 
 
 
 		<!-- Right Dynamic Content------------------------------------------------------- -->
-		<div class="col-sm-12">
+		<div class="col-md-10 col-md-offset-1">
 
 			<table data-toggle="table" class="table table-striped">
 				<thead>
