--- a/WebContent/WEB-INF/templates/editUser.html
+++ b/WebContent/WEB-INF/templates/editUser.html
@@ -91,8 +91,8 @@
 								</div>
 							</form>
 						</div>
-
-						<!-- --------------  dayOfBirth ---------------- -->
+<!--
+						<!-- --------------  dayOfBirth ---------------- 
 						<div class="form-group">
 							<label class="col-md-2 control-label">Date</label>
 							<div class="col-md-10">
@@ -102,7 +102,7 @@
 
 							</div>
 						</div>
-
+-->
 						<!-- --------------  buttons ---------------- -->
 						<div class="form-group">
 							<div class="col-md-10 col-md-offset-2">
