fixed cancel button in new user form

--- a/WebContent/WEB-INF/templates/editUser.html
+++ b/WebContent/WEB-INF/templates/editUser.html
@@ -107,7 +107,7 @@
 						<div class="form-group">
 							<div class="col-md-10 col-md-offset-2">
 								<button type="submit" class="btn btn-primary">Submit</button>
-								<a th:href="index" class="btn btn-default"> Cancel </a>
+								<a th:href="listUsers" class="btn btn-default"> Cancel </a>
 							</div>
 						</div>
 					</fieldset>
